Fixed spacing issues in Header

--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-* {
-    margin: 0; 
+*{
     padding: 0;
-}
-.headertop{
-    
-}
-body{
-    font-family: 'Roboto Slab', serif; 
+    margin: 0;
 }
 
-.first-section{
-    background-color: #1F2937; 
-}
-
-#header-logo{
-    font-size: 24px;
-    color: #F9FAF8;
-}
-
-.header-link{
-    font-size: 24px;
-    color: #E5E7EB;
-    align-items: right;
-}
-
-.navbar{
+.header{
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    padding: 24px 100px;
+    background-color: #1F2937;
+    color: #F9FAF8;
 }
 
 ul{
     display: flex;
-    flex-direction: row;
+    list-style-type: none;
+    gap: 16px;
 }
 
-.navbar-left,.navbar-right{
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    align-items: center;
-}
-
-h1{
-    font-size: 48px;
-    font-weight: bolder;
-    color: #F9FAF8; 
-}
-
-.content{
-    display:flex;
-    flex-direction: row;
-    margin: 50px;
-}
-
-.content-left{
-    display: flex;
-    flex-direction: column;
-    width:50%;
-    justify-content: center;
-    margin: 200px;
-}
-
-
-.content-right{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 50%;
+a{
+    text-decoration: none;
+    color: #F9FAF8;
 }
 
 img{
-    height: 300px;
-    align-self: center;
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
-
-p.first{
-    font-size: 18px;
-    color: #E5E7EB;
-}
-
-.sign-up-first-section{
-    background-color: #3882F6;
-    color: white;
-    width: 100px;
-    height: 40px;
-    border: 1px #3882F6;
     border-radius: 10px;
 }
